added firmware management

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -10,6 +10,5 @@ block content
               .col-sm-6
                 input.form-control(type='text', name='cs', placeholder='connection string') 
                                          
-        button.btn.btn-space.btn-default(type='submit', name="action", form='forma', value='register') register
+        button.btn.btn-space.btn-default(type='submit', name="action", form='forma', value='register') connect
         
-      p #{msg}
