--- a/app/views/commands.jade
+++ b/app/views/commands.jade
@@ -2,14 +2,7 @@ extends layout
 
 block content
     .jumbotron
-        form(action='/dc', method='post', id='formb')
-          fieldset
-            .form-group.row
-              .col-sm-6
-                input.form-control(type='text', name='devID', placeholder=deviceId) 
-                                         
-        button.btn.btn-space.btn-danger(type='submit', name="action", form='formb', value='reboot') reboot
-        button.btn.btn-space.btn-default(type='submit', name="action", form='formb', value='last') last reboot
-        button.btn.btn-space.btn-default(type='submit', name="action", form='formb', value='location') location
-        button.btn.btn-space.btn-default(type='submit', name="action", form='formb', value='connectivity') connectivity
-      p #{msg}
+        form(action='/commands', method='post', id='formb')
+          button.btn.btn-space.btn-danger(type='submit', name="action", form='formb', value='reboot') reboot
+
+
