change reboot method into block

--- a/app/views/commands.jade
+++ b/app/views/commands.jade
@@ -5,6 +5,6 @@ block content
     .panel-heading Direct Commands
     .panel-body
         form(action='/commands', method='post', id='formb')
-          button.btn.btn-danger(type='submit', name="action", form='formb', value='reboot') reboot
+          button.btn.btn-danger(type='submit', name="action", form='formb', value='block') block
 
 
