--- a/app/views/twindes.jade
+++ b/app/views/twindes.jade
@@ -8,11 +8,13 @@ block content
                     fieldset
                         .form-group.row
                             .col-sm-4
+                                label fw version
                                 .input-group
                                     span.input-group-btn
-                                        button.btn.btn-primary(name="action", type='submit', form='formtwin', value='fw') submit
+                                        button.btn.btn-primary(name="action", type='submit', form='formtwin', value='fw') submit 
                                     input.form-control(name="fw", type='text', placeholder=version)
                             .col-sm-4
+                                label messaging interval
                                 .input-group
                                     span.input-group-btn
                                         button.btn.btn-primary(name="action", type='submit', form='formtwin', value='interval') submit
