--- a/app/views/twin.jade
+++ b/app/views/twin.jade
@@ -11,8 +11,8 @@ block content
                 th Value
             tbody
                 tr
-                td Last Reboot
-                td #{lastRebootTime}
+                td Blocked
+                td #{lastBlockTime}
                 tr
                 td Location
                 td #{location}
