--- a/app/views/commands.jade
+++ b/app/views/commands.jade
@@ -5,6 +5,8 @@ block content
     .panel-heading Direct Commands
     .panel-body
         form(action='/commands', method='post', id='formb')
-          button.btn.btn-danger(type='submit', name="action", form='formb', value='block') block
+          button.btn.btn-space.btn-danger(type='submit', name="action", form='formb', value='block') block
+          button.btn.btn-space.btn-success(type='submit', name="action", form='formb', value='release') release
+
 
 
