--- a/app/views/twin.jade
+++ b/app/views/twin.jade
@@ -4,6 +4,8 @@ block content
   .panel.panel-default
     .panel-heading Device Reported Properties
     .panel-body
+        -if(footer == 'no device selected')
+            .alert.alert-danger choose device to display properties
         table.table.table-hover
             thead
                 tr
@@ -11,7 +13,7 @@ block content
                 th Value
             tbody
                 tr
-                td Blocked
+                td Blocking timestamp
                 td #{lastBlockTime}
                 tr
                 td Location
