--- a/app/views/device.jade
+++ b/app/views/device.jade
@@ -9,7 +9,6 @@ block content
           fieldset
             .form-group.row
               .col-sm-3
-                label selected device
-                input.form-control(type='text', name='devID', placeholder=deviceId) 
+                label selected device: #{deviceId} 
                                          
         
