added possibility to choose device via search

--- a/app/views/device.jade
+++ b/app/views/device.jade
@@ -9,6 +9,6 @@ block content
           fieldset
             .form-group.row
               .col-sm-3
-                label selected device: #{deviceId} 
-                                         
-        
+                h3 selected device: #{deviceId}
+
+
